--- a/webpages/student_dahboard/student_dashboard.css
+++ b/webpages/student_dahboard/student_dashboard.css
@@ -1,3 +1,208 @@
+/*Menu*/
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap');
+
+:root {
+    --menuColor: #505050;
+    --textColor: #000000;
+    --textAltColor: #ffffff;
+    --paddingGap: 0.9em;
+    --menuTransition: 0.5s;
+
+    --studentColor: #00BBAA;
+    --studentPanelColor: #85b6b556;
+    --teacherColor: #149712;
+    --teacherPanelColor: #478b4556;
+    --adminColor: #242424;
+    --adminPanelColor: #3a3a3a3a;
+}
+
+body {
+    font-family: 'Manrope', 'Inter', Arial, sans-serif;
+    display: flex;
+    flex-direction: column;
+    margin: 0;
+    padding: 0;
+    height: 100vh;
+}
+
+.SD_header {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: stretch;
+    padding: calc(0.6*var(--paddingGap)) var(--paddingGap);
+}
+
+/* Menu icon to corss icon*/
+.SD_hamburger {
+    position: relative;
+    display: block;
+    cursor: pointer;
+    padding: 0;   
+    border: none;
+    appearance: none;
+    background: none;
+    outline: none;
+    width: 27px;
+    z-index: 99;
+}
+
+.SD_hamburger .SD_navbar, .SD_hamburger:after, .SD_hamburger::before {
+    display: block;
+    content: '';
+    width: 100%;
+    height: 4px;
+    background-color: #000000;
+    margin: 4.5px 0;
+    transition: var(--menuTransition);
+}
+
+.SD_hamburger.SD_is-active:before {
+    transform: rotate(45deg) translate(3px, 11px);
+    background-color: #FFFFFF;
+}
+
+.SD_hamburger.SD_is-active:after {
+    transform: rotate(-45deg) translate(1px, -9px);
+    background-color: #FFFFFF;
+}
+
+.SD_hamburger.SD_is-active .SD_navbar {
+    opacity: 0;
+}
+/**/
+
+/* Navigation Bar */
+.SD_navigation {
+    position: fixed;
+    top: 0;
+    left: -100%;
+    width: 200px;
+    min-height: 100vh;
+    z-index: 98;
+    background-color: var(--menuColor);
+    padding-top: 3em;
+    transition: var(--menuTransition);
+    
+    opacity: 0.9;
+
+    display: flex;
+    flex-direction: column;
+    a {
+        padding: calc(0.6*var(--paddingGap)) var(--paddingGap);
+        color: var(--textAltColor);
+        text-decoration: none;
+        border: 0;
+        transition: 0.2s;
+    }
+
+    a:hover {
+        padding: calc(0.5*var(--paddingGap)) var(--paddingGap);
+        text-decoration: none;
+    }
+}
+
+.SD_navigation.SD_is-active {
+    left: 0;
+}
+/**/
+
+/*Log Out*/
+.SD_logOut {
+    font-family: 'Manrope', 'Inter', Arial, sans-serif;
+    background-color: var(--menuColor);
+    color: #FFFFFF;
+    border: 0;
+    padding: 0 2em;
+    border-radius: 10em;
+    cursor: pointer;
+}
+
+/*Table*/
+.SD_table {
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+    padding: calc(0.5*var(--paddingGap));
+    /*From panel*/
+    border-radius: 0.7em;
+    background-color: var(--studentPanelColor);
+}
+
+.SD_table > div,
+.SD_table > a {
+    display: flex;
+    padding: calc(0.5*var(--paddingGap));
+}
+
+.SD_table > a {
+    text-decoration: none;
+    font-weight: 600;
+    color: var(--textColor);
+}
+
+.SD_table > .SD_heading {
+    font-weight: 800;
+    border-bottom: 1px solid #000000;
+}
+
+/*Teacher Dashboard Table*/
+.SD_table > a > .SD_subject {
+    transition: 0.3s;
+}
+
+.SD_table > a > .SD_subject:hover {
+    transform: scale(1.012);
+}
+
+.SD_table .SD_code {
+    width: 4.5em;
+}
+
+.SD_table .SD_subject {
+    flex: 1;
+}
+
+.SD_table .SD_semester {
+    justify-content: flex-start;
+    width: 3em;
+}
+
+/*Subject Page Table*/
+.SD_table > a > .SD_lectureTitle {
+    transition: 0.3s;
+}
+.SD_table > a > .SD_lectureTitle:hover {
+    transform: scale(1.012);
+}
+
+@media only screen and (max-width: 395px) {
+    .SD_table > a > .SD_lectureTitle {
+        word-break: break-all;
+    }
+}
+
+.SD_table .SD_lectureNumber,
+.SD_table .SD_section {
+    width: 2.5em;
+    /*Later change Sec. to Section using media query for desktop*/
+}
+
+.SD_table .SD_lectureTitle {
+    flex: 1;
+}
+
+.SD_table .SD_date {
+    width: 6em;
+}
+
+.SD_table .SD_time {
+    width: 3em;
+}
+
+
+/*Student Dashboard css*/
 body {
     background-color: #FFFFFF;
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 1600 900'%3E%3Cpolygon fill='%234cccbc' points='957 450 539 900 1396 900'/%3E%3Cpolygon fill='%232c73aa' points='957 450 872.9 900 1396 900'/%3E%3Cpolygon fill='%2345c5b9' points='-60 900 398 662 816 900'/%3E%3Cpolygon fill='%231265a6' points='337 900 398 662 816 900'/%3E%3Cpolygon fill='%233fbeb5' points='1203 546 1552 900 876 900'/%3E%3Cpolygon fill='%230057a1' points='1203 546 1552 900 1162 900'/%3E%3Cpolygon fill='%2338b8b2' points='641 695 886 900 367 900'/%3E%3Cpolygon fill='%2300489a' points='587 900 641 695 886 900'/%3E%3Cpolygon fill='%2332b1ae' points='1710 900 1401 632 1096 900'/%3E%3Cpolygon fill='%23003992' points='1710 900 1401 632 1365 900'/%3E%3Cpolygon fill='%232daaaa' points='1210 900 971 687 725 900'/%3E%3Cpolygon fill='%230b2888' points='943 900 1210 900 971 687'/%3E%3C/svg%3E");
@@ -7,15 +212,11 @@ body {
 }
 
 /*Nav bar and Colors*/
-.header {
+.SD_header {
     background-color: var(--studentColor);
 }
 
-.panel {
-    background-color: var(--studentPanelColor);
-}
-
-.navigation {
+.SD_navigation {
     background-color: var(--menuColor);
     a:hover {
         background-color: var(--studentPanelColor);
@@ -23,7 +224,7 @@ body {
 }
 
 /**/
-.mainPage {
+.SD_mainPage {
     display: flex;
     flex-direction: column;
     height: 100vh;
@@ -31,7 +232,7 @@ body {
     gap: var(--paddingGap);
 }
 
-.mainPage > .profile {
+.SD_mainPage > .SD_profile {
     display: flex;
     flex: 1;
     flex-direction: column;
@@ -39,14 +240,17 @@ body {
     align-items: center;
     gap: 1em;
     padding: var(--paddingGap);
+    /*From panel*/
+    border-radius: 0.7em;
+    background-color: var(--studentPanelColor);
 }
 
-.mainPage > .profile > .profilePic {
+.SD_mainPage > .SD_profile > .SD_profilePic {
     height: 8em;
     border-radius: 50%;
 }
 
-.mainPage > .profile > .profileText {
+.SD_mainPage > .SD_profile > .SD_profileText {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -54,18 +258,18 @@ body {
     gap: 0.2em;
 }
 
-.mainPage > .profile > .profileText > .name {
+.SD_mainPage > .SD_profile > .SD_profileText > .SD_name {
     font-size: 1.7em;
     font-weight: 600;
     padding-bottom: 0.2em;
 }
 
-.mainPage > .profile > .profileText > .studentID,
-.mainPage > .profile > .profileText > .department {
+.SD_mainPage > .SD_profile > .SD_profileText > .SD_studentID,
+.SD_mainPage > .SD_profile > .SD_profileText > .SD_department {
     font-weight: 500;
 }
 
-.mainPage .markAttendance {
+.SD_mainPage .SD_markAttendance {
     border: 0;
     background-color: var(--studentColor);
     border-radius: 2em;
